--- a/parts/user-registration/puavo-user-registration.glade
+++ b/parts/user-registration/puavo-user-registration.glade
@@ -6,6 +6,114 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
   </object>
+  <object class="GtkApplicationWindow" id="main_window">
+    <property name="width_request">480</property>
+    <property name="height_request">420</property>
+    <property name="can_focus">False</property>
+    <property name="title" translatable="yes">New user registration</property>
+    <property name="window_position">center-always</property>
+    <property name="gravity">static</property>
+    <property name="has_resize_grip">True</property>
+    <property name="show_menubar">False</property>
+    <signal name="destroy" handler="on_destroy" swapped="no"/>
+    <child>
+      <object class="GtkBox" id="main_container">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <child>
+          <object class="GtkFrame" id="upper_frame">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="halign">end</property>
+            <property name="valign">start</property>
+            <property name="label_xalign">0</property>
+            <property name="label_yalign">0</property>
+            <property name="shadow_type">none</property>
+            <child>
+              <placeholder/>
+            </child>
+            <style>
+              <class name="upper_frame"/>
+            </style>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox" id="lower_button_box">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="margin_left">10</property>
+            <property name="spacing">10</property>
+            <property name="baseline_position">bottom</property>
+            <child>
+              <object class="GtkButton" id="go_to_desktop">
+                <property name="label" translatable="yes">Go to desktop</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="valign">end</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="privacy_policy">
+                <property name="label" translatable="yes">Privacy policy...</property>
+                <property name="name">0</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="no_show_all">True</property>
+                <property name="valign">end</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkImage" id="contact_info">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="margin_right">10</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="pack_type">end</property>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <style>
+              <class name="lower_button_box"/>
+            </style>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="padding">10</property>
+            <property name="pack_type">end</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <style>
+          <class name="main_container"/>
+        </style>
+      </object>
+    </child>
+    <style>
+      <class name="main_window"/>
+    </style>
+  </object>
   <object class="GtkBox" id="register_user">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -124,7 +232,6 @@
           <object class="GtkEntry" id="first_name">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hexpand">True</property>
             <property name="max_length">32</property>
             <property name="caps_lock_warning">False</property>
             <property name="input_purpose">name</property>
@@ -229,9 +336,14 @@
           <object class="GtkLabel" id="username_hint">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="no_show_all">True</property>
             <property name="halign">start</property>
             <property name="valign">start</property>
             <property name="use_markup">True</property>
+            <property name="max_width_chars">50</property>
+            <style>
+              <class name="username_hint"/>
+            </style>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -239,15 +351,17 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel">
+          <object class="GtkLabel" id="phone_number_hint">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="no_show_all">True</property>
             <property name="halign">start</property>
             <property name="valign">start</property>
             <property name="label" translatable="yes">Phone number is optional.  It is used only in support situations.</property>
-            <attributes>
-              <attribute name="foreground" value="#88888a8a8585"/>
-            </attributes>
+            <property name="max_width_chars">50</property>
+            <style>
+              <class name="phone_number_hint"/>
+            </style>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -255,16 +369,18 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel">
+          <object class="GtkLabel" id="email_hint">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="no_show_all">True</property>
             <property name="halign">start</property>
             <property name="valign">start</property>
             <property name="label" translatable="yes">You will receive confirmation to your email address.  The address is also used for password reset.</property>
             <property name="wrap">True</property>
-            <attributes>
-              <attribute name="foreground" value="#88888a8a8585"/>
-            </attributes>
+            <property name="max_width_chars">50</property>
+            <style>
+              <class name="email_hint"/>
+            </style>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -346,20 +462,6 @@
             <property name="position">0</property>
           </packing>
         </child>
-        <child>
-          <object class="GtkButton" id="reset">
-            <property name="label" translatable="yes">Reset form</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <signal name="clicked" handler="on_reset_clicked" swapped="no"/>
-          </object>
-          <packing>
-            <property name="expand">True</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
       </object>
       <packing>
         <property name="expand">False</property>
@@ -369,56 +471,9 @@
       </packing>
     </child>
   </object>
-  <object class="GtkApplicationWindow" id="register_window">
-    <property name="width_request">480</property>
-    <property name="height_request">420</property>
-    <property name="can_focus">False</property>
-    <property name="title" translatable="yes">New user registration</property>
-    <property name="window_position">center-always</property>
-    <property name="default_width">480</property>
-    <property name="default_height">420</property>
-    <property name="gravity">static</property>
-    <property name="has_resize_grip">True</property>
-    <property name="show_menubar">False</property>
-    <signal name="destroy" handler="on_destroy" swapped="no"/>
-    <child>
-      <object class="GtkBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
-        <child>
-          <object class="GtkFrame" id="register_frame">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label_xalign">0</property>
-            <child>
-              <placeholder/>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkButton" id="go_to_desktop">
-            <property name="label" translatable="yes">Go to desktop</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="no_show_all">True</property>
-            <property name="halign">start</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
-      </object>
-    </child>
-  </object>
   <object class="GtkBox" id="wifi_connector_box">
+    <property name="width_request">1000</property>
+    <property name="height_request">600</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="hexpand">True</property>
@@ -430,18 +485,34 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="shadow_type">in</property>
+        <property name="min_content_width">0</property>
+        <property name="min_content_height">150</property>
+        <property name="overlay_scrolling">False</property>
+        <property name="max_content_width">250</property>
+        <property name="max_content_height">0</property>
+        <property name="propagate_natural_width">True</property>
         <child>
           <object class="GtkViewport">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="shadow_type">none</property>
             <child>
               <object class="GtkListBox" id="networks_list">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <style>
+                  <class name="networks_list"/>
+                </style>
               </object>
             </child>
+            <style>
+              <class name="network_viewport"/>
+            </style>
           </object>
         </child>
+        <style>
+          <class name="scrolled_window"/>
+        </style>
       </object>
       <packing>
         <property name="expand">True</property>
@@ -453,18 +524,22 @@
       <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="valign">center</property>
+        <property name="valign">start</property>
         <property name="orientation">vertical</property>
         <property name="spacing">5</property>
         <child>
           <object class="GtkLabel" id="wifi_connector_description">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="valign">center</property>
             <property name="label" translatable="yes">Connect to network</property>
+            <style>
+              <class name="network_main_label"/>
+            </style>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="fill">True</property>
+            <property name="fill">False</property>
             <property name="position">0</property>
           </packing>
         </child>
@@ -476,9 +551,14 @@
               <object class="GtkLabel" id="network_password_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_right">20</property>
+                <property name="halign">end</property>
+                <property name="margin_left">10</property>
+                <property name="margin_right">10</property>
                 <property name="label" translatable="yes">Password:</property>
                 <property name="justify">right</property>
+                <style>
+                  <class name="network_label"/>
+                </style>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -491,8 +571,13 @@
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
+                <property name="margin_right">10</property>
                 <property name="visibility">False</property>
+                <property name="width_chars">32</property>
                 <property name="input_purpose">password</property>
+                <style>
+                  <class name="network_password_entry"/>
+                </style>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -500,6 +585,9 @@
                 <property name="position">1</property>
               </packing>
             </child>
+            <style>
+              <class name="password_box"/>
+            </style>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -514,6 +602,10 @@
             <property name="sensitive">False</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
+            <property name="halign">center</property>
+            <style>
+              <class name="network_connect"/>
+            </style>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -554,10 +646,14 @@
             <property name="position">3</property>
           </packing>
         </child>
+        <style>
+          <class name="password_container"/>
+        </style>
       </object>
       <packing>
         <property name="expand">True</property>
-        <property name="fill">True</property>
+        <property name="fill">False</property>
+        <property name="pack_type">end</property>
         <property name="position">1</property>
       </packing>
     </child>
